Avoid extra blank pages on printing Rounding errors in vertical dimension calculations sometimes make the page size too large to fit within the actual page in printing (PDF) and cause extra blank pages. We subtract a small length from the padding-bottom value to avoid this problem.

--- a/resources/vivliostyle-viewport.css
+++ b/resources/vivliostyle-viewport.css
@@ -18,7 +18,7 @@
     /* Workaround for Chrome printing problem */
     [data-vivliostyle-viewer-viewport] > div > div > div {
         display: block !important;
-        height: 99.99% !important;
+        page-break-after: always;
     }
 }
 
